style.css
/* ... */
.style_3 {
    font-style: italic;
    color: #000;

    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    display: table;
    /*    background: #C20017;*/
}

.style_4 {

    font-style: italic;

    color: #000;

    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    display: table;
}

.style_5 {
    color: #000;

    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    display: table;
}

.mobile {
    display: none;
}

.questionMark {
    position: fixed;
    /*    font-size: var(--large-text-size);*/
    color: var(--main-font-color);
    left: 10px;
    bottom: 10px;
    font-family: helvetica;
    z-index: 10;
}








/*rescaling for Mobile Versions*/
@media (max-width: 602px) {
    body {
        font-size: 5vw;
        line-height: 1.1;
    }

    :root {
        --large-text-size: 30px;
    }

    p {
        text-indent: 30px;
        /*        vertical-align: baseline;*/
    }

    .text {

        overflow-y: scroll;
        overflow-x: hidden;

        mask-image: linear-gradient(transparent, black 2%, black 98%, transparent 100%);
        -webkit-mask-image: linear-gradient(transparent, black 2%, black 98%, transparent 100%);

        height: 79vh;
    }

    .chapterHeadline {
        font-size: 7vw;
        line-height: 7vw;
    }


    .definitionsColumn {
        opacity: 1;
        color: var(--main-font-color);
        position: relative;
        height: auto;
        overflow-y: hidden;
        font-size: 7vw;
        line-height: 7vw;
        padding-top: 20px;
    }

    #gridcontainer {
        grid-template-columns: 1fr;
        height: 79vh;
        overflow-y: scroll;
        position: absolute;
    }

    .desktop {
        display: none;
    }

    .mobile {
        display: block;
    }

    /*
    chapterColumn.mobile {
        display: block;
    }
*/

    ul.chapterColumn.mobile {
        height: var(--main-text-size);
        text-align: justify;
        left: 50%;
        transform: translate(-50%, 0);
        width: auto;
        min-width: 90vw;
        overflow-y: hidden;
        text-align: center;

        align-items: stretch;
        /* Default */
        justify-content: space-between;
        width: calc(100vw - 0px);
        display: flex;
    }


    li.chapterItem {
        margin-bottom: 40px;
        /*        display: inline-block;*/
        width: calc((100vw / 7) - 15px);
        text-align: justify;
        text-align: center;
        display: block;
        flex: 0 1 auto;
        /* Default */
        list-style-type: none;
    }

    .chapterInfo {
        font-size: 3vw;
    }

    .subheadline {
        text-indent: 0;
        padding-left: 30px;
    }

    .headerTitle {
        display: none;
    }

    .headerTitle.glossary {
        display: none;
    }

    .headerTitle.footnotes {
        display: none;
    }

    .placeholder {
        height: 10vh;
    }



    .footnotes {
        font-size: 3vw;
        line-height: 1;
    }

    .footnotesColumn {
        opacity: 1;
        height: auto;
        position: relative;
    }

    .footnoteItem {
        color: #bfbfbf;
        -webkit-text-stroke: #bfbfbf 1.02px;
    }

    ol {
        columns: 2;
        column-gap: 30px;
        break-inside: avoid-column;
        page-break-inside: avoid;
        -webkit-column-break-inside: avoid;
        -moz-column-break-inside: avoid;
        -o-column-break-inside: avoid;
        -ms-column-break-inside: avoid;
        column-break-inside: avoid;
    }

    h1#headline {
        font-size: 12vw;
        line-height: 10vw;
    }

    .panel {
        font-size: 4vw;
        line-height: 1;
    }


    .footeritem {
        position: absolute;
        display: inline-block;
        color: var(--main-font-color);
        -webkit-text-stroke: var(--main-font-color) 1.02px;
        opacity: 1 !important;
        visibility: visible;
        z-index: 12;
    }

    .footerfootnotes {
        left: 15px;
        bottom: 10px;
        opacity: 1 !important;
    }

    .footerdefinitions {
        right: 15px;
        bottom: 10px;
        opacity: 1 !important;
    }

    .openconsole {
        display: none;
    }

}

